--- a/config/aria2.conf
+++ b/config/aria2.conf
@@ -83,7 +83,7 @@ connect-timeout=10
 timeout=10
 
 # 最大同时下载任务数, 运行时可修改, 默认:5
-max-concurrent-downloads=5
+max-concurrent-downloads=10
 
 # 单服务器最大连接线程数, 任务添加时可指定, 默认:1
 # 最大值为 16 (增强版无限制), 且受限于单任务最大连接线程数(split)所设定的值。
@@ -296,7 +296,7 @@ peer-id-prefix=-qB4250-
 #on-download-start=upload.sh
 
 # BT 下载完成后执行的命令
-#on-bt-download-complete=upload.sh
+on-bt-download-complete=/root/.aria2/upload.sh
 
 
 ## RPC 设置 ##
